--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -12,19 +12,26 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
     - uses: actions/setup-python@v4
       with:
         python-version: "3.8"
 
+    - uses: snok/install-poetry@v1.3.3
+      with:
+        version: 1.3.2
+        virtualenvs-create: false
+        virtualenvs-in-project: false
+
     - name: Lint
       run: make lint
-    
+
   test:
     strategy:
       fail-fast: false
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11"]
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -33,6 +40,12 @@ jobs:
     - uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
+
+    - uses: snok/install-poetry@v1.3.3
+      with:
+        version: 1.3.2
+        virtualenvs-create: false
+        virtualenvs-in-project: false
 
     - name: Test
       run: make test
