Add language to test ID. Fix duplicate code issue

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,8 +46,7 @@ disable = [
     "missing-function-docstring",
     "line-too-long",
     "too-few-public-methods",
-    "no-else-return",
-    "duplicate-code"
+    "no-else-return"
 ]
 
 [tool.pylint.basic]
