--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ docker = "^6.0.1"
 jinja2 = "^3.1.2"
 pytest = "^7.2.1"
 pyyaml = "^6.0"
+pytest-xdist = "^3.2.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
