--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,8 @@ pylint = "^2.16.2"
 pytest-cov = "^4.0.0"
 coverage = "^7.2.0"
 coverage-badge = "^1.1.0"
+sphinx = "^6.1.3"
+sphinx-rtd-theme = "^1.2.0"
 
 [tool.poetry.scripts]
 glotter = "glotter.__main__:main"
