--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,9 +24,9 @@ jinja2 = "^3.1.2"
 pytest = "^7.2.1"
 pyyaml = "^6.0"
 pytest-xdist = "^3.2.0"
+black = "23.1.0"
 
 [tool.poetry.group.dev.dependencies]
-black = "^23.1.0"
 pylint = "^2.16.2"
 pytest-cov = "^4.0.0"
 coverage = "^7.2.0"
