--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ jinja2 = "^3.1.2"
 pytest = "^7.2.1"
 pyyaml = "^6.0"
 pytest-xdist = "^3.2.0"
-black = "23.1.0"
+black = "^23.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.16.2"
