--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ pytest = "^7.2.1"
 pyyaml = "^6.0"
 pytest-xdist = "^3.2.0"
 black = "^23.1.0"
+pydantic = "^1.10.6"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.16.2"
