--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -7,19 +7,35 @@ on:
     branches: [ "main" ]
 
 jobs:
+  read-config:
+    runs-on: ubuntu-latest
+
+    outputs:
+      config: ${{ steps.repo-config.outputs }}
+
+    steps:
+      - uses: actions/checkout@v4
+  
+      - name: Read repo config
+        uses: pietrobolcato/action-read-yaml@1.1.0
+        id: repo-config
+        with:
+          config: repo-config.yml
+  
   lint:
     runs-on: ubuntu-latest
+    needs: read-config
 
     steps:
     - uses: actions/checkout@v4
 
     - uses: actions/setup-python@v5
       with:
-        python-version: "3.9"
+        python-version: "${{ needs.read-config.outputs.config['python-versions'][0] }}"
 
     - uses: snok/install-poetry@v1
       with:
-        version: 2.1.1
+        version: "${{ needs.read-config.outputs.config['poetry-version'] }}"
         virtualenvs-create: false
         virtualenvs-in-project: false
 
@@ -27,10 +43,12 @@ jobs:
       run: make lint
 
   test:
+    needs: read-config
+
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
+        python-version: ${{ needs.read-config.outputs.config['python-versions'] }}
         os: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.os }}
 
@@ -43,26 +61,42 @@ jobs:
 
     - uses: snok/install-poetry@v1
       with:
-        version: 2.1.1
+        version: "${{ needs.read-config.outputs.config['poetry-version'] }}"
         virtualenvs-create: false
         virtualenvs-in-project: false
 
     - name: Test
       run: make test
 
+  test-results:
+    name: Test Results
+    needs: test
+    runs-on: ubuntu-latest
+    if: ${{ always() }}
+
+    steps:
+      - run: |
+          result="${{ needs.test.result }}"
+          if [[ $result == "success" || $result == "skipped" ]]; then
+            exit 0
+          else
+            exit 1
+          fi
+
   doc:
     runs-on: ubuntu-latest
+    needs: read-config
 
     steps:
     - uses: actions/checkout@v4
 
     - uses: actions/setup-python@v5
       with:
-        python-version: "3.9"
+        python-version: "${{ needs.read-config.outputs.config['python-versions'][0] }}"
 
     - uses: snok/install-poetry@v1
       with:
-        version: 2.1.1
+        version: "${{ needs.read-config.outputs.config['poetry-version'] }}"
         virtualenvs-create: false
         virtualenvs-in-project: false
 
