--- a/repo-config.yml
+++ b/repo-config.yml
@@ -1,6 +1,2 @@
-python-versions:
-  - "3.9"
-  - "3.10"
-  - "3.11"
-  - "3.12"
+python-versions: "3.9, 3.10, 3.11, 3.12, 3.13"
 poetry-version: "2.1.1"
