--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -7,19 +7,56 @@ on:
     branches: [ "main" ]
 
 jobs:
-  lint:
+  read-config:
+    name: Read Config
     runs-on: ubuntu-latest
+
+    outputs:
+      first-python-version: "${{ steps.first-python-version.outputs.first-python-version }}"
+      python-versions: "${{ steps.python-versions.outputs.python-versions }}"
+      poetry-version: "${{ steps.repo-config.outputs['poetry-version'] }}"
+
+    steps:
+      - uses: actions/checkout@v4
+  
+      - name: Read repo config
+        uses: pietrobolcato/action-read-yaml@1.1.0
+        id: repo-config
+        with:
+          config: repo-config.yml
+
+      - name: Get first python version
+        id: first-python-version
+        run: |
+          ( \
+            echo "first-python-version=${{ steps.repo-config.outputs['python-versions'] }}" | \
+            sed 's/\s+//g' | \
+            cut -d',' -f1 \
+          ) >>"$GITHUB_OUTPUT"
+
+      - name: JSONify python versions
+        id: python-versions
+        run: |
+          ( \
+            echo "python-versions=[${{ steps.repo-config.outputs['python-versions'] }}]" | \
+            sed -r 's/([0-9.]+)/"\1"/g' \
+          ) >>"$GITHUB_OUTPUT"
+
+  lint:
+    name: Lint
+    runs-on: ubuntu-latest
+    needs: read-config
 
     steps:
     - uses: actions/checkout@v4
 
     - uses: actions/setup-python@v5
       with:
-        python-version: "3.9"
+        python-version: "${{ needs.read-config.outputs.first-python-version }}"
 
     - uses: snok/install-poetry@v1
       with:
-        version: 2.1.1
+        version: "${{ needs.read-config.outputs.poetry-version }}"
         virtualenvs-create: false
         virtualenvs-in-project: false
 
@@ -27,10 +64,13 @@ jobs:
       run: make lint
 
   test:
+    name: Test
+    needs: read-config
+
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
+        python-version: ${{ fromJson(needs.read-config.outputs.python-versions) }}
         os: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.os }}
 
@@ -43,26 +83,43 @@ jobs:
 
     - uses: snok/install-poetry@v1
       with:
-        version: 2.1.1
+        version: "${{ needs.read-config.outputs.poetry-version }}"
         virtualenvs-create: false
         virtualenvs-in-project: false
 
     - name: Test
       run: make test
 
-  doc:
+  test-results:
+    name: Test Results
+    needs: test
     runs-on: ubuntu-latest
+    if: ${{ always() }}
+
+    steps:
+      - run: |
+          result="${{ needs.test.result }}"
+          if [[ $result == "success" ]]; then
+            exit 0
+          else
+            exit 1
+          fi
+
+  doc:
+    name: Doc
+    runs-on: ubuntu-latest
+    needs: read-config
 
     steps:
     - uses: actions/checkout@v4
 
     - uses: actions/setup-python@v5
       with:
-        python-version: "3.9"
+        python-version: "${{ needs.read-config.outputs.first-python-version }}"
 
     - uses: snok/install-poetry@v1
       with:
-        version: 2.1.1
+        version: "${{ needs.read-config.outputs.poetry-version }}"
         virtualenvs-create: false
         virtualenvs-in-project: false
 
