--- a/repo-config.yml
+++ b/repo-config.yml
@@ -1,3 +1,3 @@
 python-versions: "3.9, 3.10, 3.11, 3.12, 3.13"
 poetry-version: "2.1.1"
-oses: "ubuntu-latest, macos-latest, windows-latest"
+oses: "ubuntu-latest, macos-latest"
