Add regex chars to 'jsonify-items' script

--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -38,14 +38,16 @@ jobs:
         run: |
           ./scripts/jsonify-items.sh \
             "python-versions" \
-            "${{ steps.repo-config.outputs['python-versions'] }}" >>"$GITHUB_OUTPUT"
+            "${{ steps.repo-config.outputs['python-versions'] }}" \
+            "0-9." >>"$GITHUB_OUTPUT"
 
       - name: JSONify OSes
         id: oses
         run: |
           ./scripts/jsonify-items.sh \
             "oses" \
-            "${{ steps.repo-config.outputs['oses'] }}" >>"$GITHUB_OUTPUT"
+            "${{ steps.repo-config.outputs['oses'] }}" \
+            "^," >>"$GITHUB_OUTPUT"
     
   lint:
     name: Lint
