--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -78,7 +78,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ${{ fromJson(needs.read-config.outputs.python-versions) }}
-        os: ${{ fromJson(needs.read-config.outputs.oses) }}
+        os: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.os }}
 
     steps:
