--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -69,7 +69,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ${{ fromJson(needs.read-config.outputs.python-versions) }}
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
 
     steps:
