--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -14,7 +14,7 @@ jobs:
     outputs:
       first-python-version: "${{ steps.first-python-version.outputs.first-python-version }}"
       python-versions: "${{ steps.python-versions.outputs.python-versions }}"
-      poetry-version: "${{ steps.repo-config.outputs['poetry-version'] }}"
+      uv-version: "${{ steps.repo-config.outputs['uv-version'] }}"
 
     steps:
       - uses: actions/checkout@v4
@@ -48,15 +48,10 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - uses: actions/setup-python@v5
+    - uses: astral-sh/setup-uv@v6
       with:
+        version: "${{ needs.read-config.outputs.uv-version }}"
         python-version: "${{ needs.read-config.outputs.first-python-version }}"
-
-    - uses: snok/install-poetry@v1
-      with:
-        version: "${{ needs.read-config.outputs.poetry-version }}"
-        virtualenvs-create: false
-        virtualenvs-in-project: false
 
     - name: Lint
       run: make lint
@@ -75,15 +70,10 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - uses: actions/setup-python@v5
+    - uses: astral-sh/setup-uv@v6
       with:
+        version: "${{ needs.read-config.outputs.uv-version }}"
         python-version: "${{ matrix.python-version }}"
-
-    - uses: snok/install-poetry@v1
-      with:
-        version: "${{ needs.read-config.outputs.poetry-version }}"
-        virtualenvs-create: false
-        virtualenvs-in-project: false
 
     - name: Test
       run: make test
@@ -111,15 +101,10 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - uses: actions/setup-python@v5
+    - uses: astral-sh/setup-uv@v6
       with:
+        version: "${{ needs.read-config.outputs.uv-version }}"
         python-version: "${{ needs.read-config.outputs.first-python-version }}"
-
-    - uses: snok/install-poetry@v1
-      with:
-        version: "${{ needs.read-config.outputs.poetry-version }}"
-        virtualenvs-create: false
-        virtualenvs-in-project: false
 
     - name: Test
       run: make test
