--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,17 +3,23 @@ name = "glotter2"
 version = "0.11.0"
 description = "An execution library for scripts written in any language. This is a fork of https://github.com/auroq/glotter"
 authors = [
-    {name = "auroq"}, 
-    {name = "rzuckerm"}
+    { name = "auroq" },
+    { name = "rzuckerm" },
 ]
+requires-python = ">=3.9,<4.0"
 readme = "README.md"
-license = "LICENSE.txt"
+license = {text = "LICENSE.txt"}
 classifiers = [
     "Development Status :: 3 - Alpha",
     "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent"
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
 ]
-requires-python=">=3.9,<4.0"
 dependencies = [
     "docker (>=7.1.0,<8.0)",
     "jinja2 (>=3.1.2,<4.0)",
@@ -21,33 +27,35 @@ dependencies = [
     "pyyaml (>6.0,<7.0)",
     "pytest-xdist (>=3.6.1,<4.0)",
     "black (>=24.10.0,<25.0)",
-    "pydantic (>=1.10.6,<2.0)"
+    "pydantic (>=1.10.6,<2.0)",
 ]
-dynamic = [ "classifiers" ]
 
 [project.urls]
 "Bug Tracker" = "https://github.com/rzuckerm/glotter2/issues"
-"Changelog" = "https://github.com/rzuckerm/glotter2#changelog"
+Changelog = "https://github.com/rzuckerm/glotter2#changelog"
 homepage = "https://github.com/rzuckerm/glotter2"
 documentation = "https://rzuckerm.github.io/glotter2"
 
 [project.scripts]
 glotter = "glotter.__main__:main"
 
-[tool.poetry]
-packages = [{include="glotter"}]
-
-[tool.poetry.group.dev.dependencies]
-pylint = "^2.16.2"
-pytest-cov = "^4.0.0"
-coverage = "^7.2.0"
-coverage-badge = "^1.1.0"
-sphinx = "^6.1.3"
-sphinx-rtd-theme = "^1.2.0"
+[dependency-groups]
+dev = [
+    "pylint>=2.16.2,<3",
+    "pytest-cov>=4.0.0,<5",
+    "coverage>=7.2.0,<8",
+    "coverage-badge>=1.1.0,<2",
+    "sphinx>=6.1.3,<7",
+    "sphinx-rtd-theme>=1.2.0,<2",
+]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["uv_build>=0.8.17,<0.9.0"]
+build-backend = "uv_build"
+
+[tool.uv.build-backend]
+module-name = "glotter"
+module-root = ""
 
 [tool.pylint.format]
 max-line-length = 100
