--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "glotter2"
-version = "0.11.0"
+version = "0.11.1"
 description = "An execution library for scripts written in any language. This is a fork of https://github.com/auroq/glotter"
 authors = [
     { name = "auroq" },
@@ -41,12 +41,12 @@ glotter = "glotter.__main__:main"
 
 [dependency-groups]
 dev = [
-    "pylint>=2.16.2,<3",
     "pytest-cov>=4.0.0,<5",
     "coverage>=7.2.0,<8",
     "coverage-badge>=1.1.0,<2",
     "sphinx>=6.1.3,<7",
     "sphinx-rtd-theme>=1.2.0,<2",
+    "ruff>=0.13.0,<0.14.0",
 ]
 
 [build-system]
@@ -57,22 +57,12 @@ build-backend = "uv_build"
 module-name = "glotter"
 module-root = ""
 
-[tool.pylint.format]
-max-line-length = 100
+[tool.ruff]
+line-length = 100
 
-[tool.pylint.message]
-disable = [
-    "missing-module-docstring",
-    "missing-class-docstring",
-    "missing-function-docstring",
-    "line-too-long",
-    "too-few-public-methods",
-    "no-else-return",
-    "too-many-arguments"
-]
+[tool.ruff.lint]
+select = ["E", "F", "I", "PL", "RUF", "T10", "W"]
+ignore = ["E501", "PLR2004", "PLW1641", "RUF005", "RUF012"]
 
-[tool.pylint.basic]
-good-names = [
-    "e", "f", "k", "v", "n",
-    "hyphen", "underscore", "camel", "pascal", "lower", "upper", "two_letter_limit"
-]
+[tool.ruff.lint.per-file-ignores]
+"test/*" = ["PLR0913"]
