--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "glotter2"
-version = "0.11.1"
+version = "0.12.0a0"
 description = "An execution library for scripts written in any language. This is a fork of https://github.com/auroq/glotter"
 authors = [
     { name = "auroq" },
@@ -26,8 +26,8 @@ dependencies = [
     "pytest (>=8.3.5,<9.0)",
     "pyyaml (>6.0,<7.0)",
     "pytest-xdist (>=3.6.1,<4.0)",
-    "black (>=24.10.0,<25.0)",
     "pydantic (>=1.10.6,<2.0)",
+    "ruff>=0.13.0,<0.14.0",
 ]
 
 [project.urls]
@@ -46,7 +46,6 @@ dev = [
     "coverage-badge>=1.1.0,<2",
     "sphinx>=6.1.3,<7",
     "sphinx-rtd-theme>=1.2.0,<2",
-    "ruff>=0.13.0,<0.14.0",
 ]
 
 [build-system]
