--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,12 +21,12 @@ classifiers = [
     "Programming Language :: Python :: 3.13",
 ]
 dependencies = [
-    "docker (>=7.1.0,<8.0)",
-    "jinja2 (>=3.1.2,<4.0)",
-    "pytest (>=8.3.5,<9.0)",
-    "pyyaml (>6.0,<7.0)",
-    "pytest-xdist (>=3.6.1,<4.0)",
-    "pydantic (>=1.10.6,<2.0)",
+    "docker>=7.1.0,<8.0",
+    "jinja2>=3.1.2,<4.0",
+    "pytest>=8.3.5,<9.0",
+    "pyyaml>6.0,<7.0",
+    "pytest-xdist>=3.6.1,<4.0",
+    "pydantic>=2.11.9,<3.0",
     "ruff>=0.13.0,<0.14.0",
 ]
 
