Add V2 version of AutoGenParam

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "pytest-xdist>=3.6.1,<4.0",
     "pydantic>=2.11.9,<3.0",
     "ruff>=0.13.0,<0.14.0",
+    "pydantic-core>=2.33.2,<3.0.0",
 ]
 
 [project.urls]
