--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,13 +21,14 @@ classifiers = [
     "Programming Language :: Python :: 3.13",
 ]
 dependencies = [
-    "docker (>=7.1.0,<8.0)",
-    "jinja2 (>=3.1.2,<4.0)",
-    "pytest (>=8.3.5,<9.0)",
-    "pyyaml (>6.0,<7.0)",
-    "pytest-xdist (>=3.6.1,<4.0)",
-    "pydantic (>=1.10.6,<2.0)",
-    "ruff>=0.13.0,<0.14.0",
+    "docker>=7.1.0,<8.0",
+    "jinja2>=3.1.2,<4.0",
+    "pytest>=8.3.5,<9.0",
+    "pyyaml>6.0,<7.0",
+    "pytest-xdist>=3.6.1,<4.0",
+    "pydantic>=2.11.9,<3.0",
+    "pydantic-core>=2.33.2,<3.0.0",
+    "ruff>=0.13.1,<0.14.0",
 ]
 
 [project.urls]
@@ -49,7 +50,7 @@ dev = [
 ]
 
 [build-system]
-requires = ["uv_build>=0.8.17,<0.9.0"]
+requires = ["uv_build>=0.8.22,<0.9.0"]
 build-backend = "uv_build"
 
 [tool.uv.build-backend]
@@ -57,6 +58,7 @@ module-name = "glotter"
 module-root = ""
 
 [tool.ruff]
+target-version = "py39"
 line-length = 100
 
 [tool.ruff.lint]
