--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "glotter2"
-version = "0.12.0a0"
+version = "0.12.0"
 description = "An execution library for scripts written in any language. This is a fork of https://github.com/auroq/glotter"
 authors = [
     { name = "auroq" },
@@ -10,7 +10,7 @@ requires-python = ">=3.9,<4.0"
 readme = "README.md"
 license = {text = "LICENSE.txt"}
 classifiers = [
-    "Development Status :: 3 - Alpha",
+    "Development Status :: 5 - Production/Stable",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
@@ -28,7 +28,7 @@ dependencies = [
     "pytest-xdist>=3.6.1,<4.0",
     "pydantic>=2.11.9,<3.0",
     "pydantic-core>=2.33.2,<3.0.0",
-    "ruff>=0.13.1,<0.14.0",
+    "ruff>=0.13.2,<0.14.0",
 ]
 
 [project.urls]
