--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "glotter2"
-version = "0.12.1"
+version = "0.13.0"
 description = "An execution library for scripts written in any language. This is a fork of https://github.com/auroq/glotter"
 authors = [
     { name = "auroq" },
@@ -19,6 +19,7 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
 ]
 dependencies = [
     "docker>=7.1.0,<8.0",
@@ -26,9 +27,9 @@ dependencies = [
     "pytest>=8.3.5,<9.0",
     "pyyaml>6.0,<7.0",
     "pytest-xdist>=3.6.1,<4.0",
-    "pydantic>=2.11.9,<3.0",
+    "pydantic>=2.12,<3",
     "pydantic-core>=2.33.2,<3.0.0",
-    "ruff>=0.13.2,<0.14.0",
+    "ruff>=0.14.0,<0.15.0",
 ]
 
 [project.urls]
@@ -50,7 +51,7 @@ dev = [
 ]
 
 [build-system]
-requires = ["uv_build>=0.8.22,<0.9.0"]
+requires = ["uv_build>=0.9.0,<0.10.0"]
 build-backend = "uv_build"
 
 [tool.uv.build-backend]
