--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -97,9 +97,6 @@ jobs:
     name: Doc
     runs-on: ubuntu-latest
     needs: read-config
-    permissions:
-      pages: write
-      id-token: write
 
     steps:
     - uses: actions/checkout@v4
@@ -128,4 +125,5 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@v4
       with:
         folder: .meta/doc
+        token: ${{ secrets.REPO_TOKEN }}
       if: ${{ github.ref == 'refs/heads/main' }}
