--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,9 +45,9 @@ glotter = "glotter.__main__:main"
 dev = [
     "pytest-cov>=4.0.0,<5",
     "coverage>=7.2.0,<8",
-    "coverage-badge>=1.1.0,<2",
     "sphinx>=6.1.3,<7",
     "sphinx-rtd-theme>=1.2.0,<2",
+    "genbadge[coverage]>=1.1.3,<2.0.0",
 ]
 
 [build-system]
