--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -70,6 +70,10 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Install OpenSSL (if MacOS)
+      run: brew install openssl
+      if: "${{ matrix.os == 'mac-os-latest' }}"
+
     - uses: astral-sh/setup-uv@v6
       with:
         version: "${{ needs.read-config.outputs.uv-version }}"
